<resources>
    <string name="app_name">aplikasimobile</string>
    <string name="todo">TODO</string>
    <string name="manfaat_fotografi">Manfaat Fotografi</string>
    <string name="trik_trik_fotografi">Trik-trik Fotografi</string>
    <string name="todo2">TODO</string>
    <string name="pengertian_fotografi2">Pengertian Fotografi</string>
    <string name="sejarah_fotografi2">Sejarah Fotografi</string>
    <string name="jenis_jenis_fotografi">Jenis - jenis Fotografi</string>
    <string name="kamera">Kamera</string>
    <string name="sejarah_fotografi">Sejarah Fotografi</string>
    <string name="sejarah_fotografi1">Sejarah Fotografi</string>
    <string name="todo1">TODO</string>
    <string name="manfaat_fotografi1">Manfaat Fotografi</string>
    <string name="pengertian_fotografi1">Pengertian Fotografi</string>
    <string name="trik_trik_fotografi1">Trik-trik Fotografi</string>
    <string name="smk_an_nurmaniyah1">SMK AN-NURMANIYAH</string>
    <string name="aplikasi_alat_bantu_pembelajaran_fotografi1">Aplikasi Alat Bantu Pembelajaran Fotografi</string>
    <string name="manfaat_fotografi2">Manfaat Fotografi</string>
    <string name="jenis_jenis_fotografi1">Jenis-jenis Fotografi</string>
    <string name="kamera1">Kamera</string>
    <string name="sejarah_fotografi3">Sejarah Fotografi</string>
    <string name="jenis_jenis_fotografi2">Jenis-jenis Fotografi</string>
    <string name="kamera2">Kamera</string>
</resources>