<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="144dp"
        android:paddingRight="24dp"
        android:paddingBottom="144dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnManfaat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/manfaat_fotografi1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnPengertian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/pengertian_fotografi1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnTriktrik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/trik_trik_fotografi1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/hijau2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/smk_an_nurmaniyah1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/hijau2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/aplikasi_alat_bantu_pembelajaran_fotografi1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</RelativeLayout>