<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/black"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/pengertian_fotografi1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnsejarahfotografi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/sejarah_fotografi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnjenisjenisfotografi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/jenis_jenis_fotografi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnkamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/kamera"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>