<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".second_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="144dp"
        android:paddingRight="24dp"
        android:paddingBottom="144dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnsejarahfotografi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/sejarah_fotografi3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnjenisjenisfotografi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/jenis_jenis_fotografi2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <TextView
                android:id="@+id/btnkamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="24dp"
                android:text="@string/kamera2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>